rusty-cdk-macros/tests/fails/default_root_object_leading_slash.rs
use rusty_cdk_macros::default_root_object;

fn main() {
    default_root_object!("/index.html");
}
